# cdfi-benchmark

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
cdfibenchmark/: __init__.py  exceptions.py
cdfibenchmark/data/: fdic.py  schema.py
cdfibenchmark/metrics/: calculator.py
cdfibenchmark/peers/: selector.py
cdfibenchmark/report/: generator.py
examples/: cdfi_benchmarking_demo.ipynb
tests/: conftest.py  test_fdic.py  test_metrics.py  test_peers.py  test_report.py  test_schema.py
